# DreamAI

./: .gitignore  pyproject.toml  werk.md
dialog_eng/: blog.md  dialog.py  dialog1.py  dialog2.py  dialog3.py  dialog3_res.py  dialog4.py  dialog4_res.py  few_shot.py  few_shot_res.py  notes.md  system.py
examples/: dialog_example.py  dialog_flow.py  dialog_with_rules.json  lancedb_example.py
loan/: bm25_llm.py  find_section_task.txt  guidelines.json  guidelines_keywords.json  hp_res.json  report.md  section_kw_task.txt
med/: create_tables.py  exp.py  extract_kws.py  extraction_task.txt  kw_task.txt  med_rag.py  prompt.txt  query_tables.py  report.docx  report.html  report.md  samples.json  schema.txt  to_json.py  to_xml.py
med/charts/: chart1.md  chart1.xml  chart1_claim.json  chart1_claim.xml  chart1_kw.json  chart1_kw_retrieved.json  chart2.md  chart2.xml  chart2_claim.json  chart2_claim.xml  chart2_kw.json  chart2_kw_retrieved.json  chart3.md  chart3.xml  chart3_claim.json  chart3_claim.xml  chart3_kw.json  chart3_kw_retrieved.json
med/poc/: chart1.md  chart1_claim.json  chart2_claim.json  chart3.xml  chart3_claim.json
pallets/: lance_exp.py
src/dreamai/: ai.py  crawl.py  dialog.py  dialog_models.py  func_utils.py  lance_utils.py  md_utils.py  rag.py  rag_utils.py  response_actions.py  routing_actions.py  search_actions.py  settings.py  utils.py
src/dreamai/g_apis/: auth.py
