[project]
name = "dreamai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Hamza Farhan", email = "thehamza96@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "burr[hamilton,tracking-client,tracking-server]>=0.28.0",
    "instructor>=1.4.0",
    "anthropic>=0.34.1",
    "openai>=1.42.0",
    "lancedb>=0.12.0",
    "demoji>=1.1.0",
    "google-generativeai>=0.7.2",
    "python-dotenv>=1.0.1",
    "pymupdf4llm>=0.0.12",
    "pydantic-settings>=2.4.0",
    "lxml>=5.3.0",
    "duckduckgo-search>=6.2.11",
    "html2text>=2024.2.26",
    "trafilatura>=1.12.1",
    "pandas>=2.2.2",
    "fastapi>=0.112.2",
    "fastcore>=1.7.1",
    "termcolor>=2.4.0",
    "google-auth-oauthlib>=1.2.1",
    "python-fasthtml>=0.4.5",
    "sentence-transformers>=3.0.1",
    "tantivy>=0.22.0",
    "graphviz>=0.20.3",
    "loguru>=0.7.2",
    "pydantic",
    "playwright>=1.46.0",
    "aiohttp>=3.10.5",
    "typer>=0.12.5",
    "openpyxl>=3.1.5",
    "python-docx>=1.1.2",
    "mammoth>=1.8.0",
    "modal>=0.64.90",
    "jsonref>=1.1.0",
    "matplotlib>=3.9.2",
    "fuzzysearch>=0.7.3",
    "markdown2[all]>=2.5.0",
    "rerankers[transformers]>=0.5.3",
    "bm25s>=0.2.2",
    "pystemmer>=2.2.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"